add remote mixins (experimental)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: lets
     build:
       context: .
-      dockerfile: docker/Dockerfile
+      dockerfile: Dockerfile
     working_dir: /app
     volumes:
       - ./:/app
