rewrite root flags parsing, add tests

--- a/tests/default_env/lets.yaml
+++ b/tests/default_env/lets.yaml
@@ -9,3 +9,8 @@ commands:
 
   print-shell-args:
     cmd: echo $@
+
+  print-env:
+    options: |
+      Usage: lets print-env <env>
+    cmd: echo ${LETSOPT_ENV}=`printenv ${LETSOPT_ENV}`
