implement hidden commands

--- a/tests/help/lets.yaml
+++ b/tests/help/lets.yaml
@@ -1,6 +1,10 @@
 shell: bash
 
 commands:
+  _x:
+    description: Hidden x
+    cmd: echo "x"
+
   foo:
     description: Print foo
     cmd: echo "Foo"
