--- a/lets.yaml
+++ b/lets.yaml
@@ -13,10 +13,19 @@ commands:
     description: Create tag and push
     options: |
       Usage: lets release <version> --message=<message>
+
       Options:
-        <version>       Set version
+        <version>                  Set version (e.g. 1.0.0)
         --message=<message>, -m    Release message
+
+      Example:
+        lets release 1.0.0 -m "Release 1.0.0"
     cmd: |
+      if [[ -z "$(grep "\[${LETSOPT_VERSION}\]" docs/docs/changelog.md)" ]]; then
+        echo "Version ${LETSOPT_VERSION} not found in changelog. Update docs/docs/changelog.md and try again."
+        exit 1
+      fi
+
       git tag -a v${LETSOPT_VERSION} -m "${LETSOPT_MESSAGE}"
       git push --tags
 
