add checksum_cmd directive to command

--- a/lets.yaml
+++ b/lets.yaml
@@ -115,3 +115,7 @@ commands:
   run-docs:
     work_dir: docs
     cmd: npm start
+
+  x:
+    checksum_cmd: echo xxx_checksum
+    cmd: echo checksum for x is ${LETS_CHECKSUM}
