--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,7 +10,7 @@ release:
 
 builds:
 - env:
-    - CGO_ENABLED=0
+    - CGO_ENABLED=1
   goos:
     - linux
     - darwin
@@ -24,7 +24,7 @@ builds:
     - -X main.version={{.Version}}
 
 archives:
-- format: tar.gz
+- formats: [tar.gz]
   name_template: >-
     {{ .ProjectName }}_
     {{- title .Os }}_
@@ -66,7 +66,7 @@ checksum:
   name_template: '{{ .ProjectName }}_checksums.txt'
 
 snapshot:
-  name_template: "{{ .Tag }}-{{ .ShortCommit }}"
+  version_template: "{{ .Tag }}-{{ .ShortCommit }}"
 
 changelog:
   sort: asc
