--- a/lets.yaml
+++ b/lets.yaml
@@ -10,7 +10,10 @@ env:
 
 commands:
   release:
-    description: Create tag and push
+    description: |
+      Create tag and push
+
+      If -rcN (e.g 1.0.0-rc1) sufix used in version, it will be considered as a prerelease
     options: |
       Usage: lets release <version> --message=<message>
 
@@ -20,6 +23,7 @@ commands:
 
       Example:
         lets release 1.0.0 -m "Release 1.0.0"
+        lets release 1.0.0-rc1 -m "Prerelease 1.0.0-rc1"
     cmd: |
       if [[ -z "$(grep "\[${LETSOPT_VERSION}\]" docs/docs/changelog.md)" ]]; then
         echo "Version ${LETSOPT_VERSION} not found in changelog. Update docs/docs/changelog.md and try again."
