--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,13 +16,39 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.23.x
+      - name: Run GoReleaser (dry run)
+        run: |
+          docker run \
+            --rm \
+            -e CGO_ENABLED=1 \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v `pwd`:/go/src/${PACKAGE_NAME}\
+            -v `pwd`/sysroot:/sysroot \
+            -w /go/src/${PACKAGE_NAME} \
+            ghcr.io/goreleaser/goreleaser-cross:${GOLANG_CROSS_VERSION} \
+            --clean --skip=validate --skip=publish
+      - name: Setup release environment
+        run: |-
+          echo 'GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}}' > .release-env
+          echo 'HOMEBREW_TAP_GITHUB_TOKEN=${{secrets.GH_PAT}}' > .release-env
+          echo 'AUR_GITHUB_TOKEN=${{secrets.AUR_SSH_PRIVATE_KEY}}' > .release-env
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v4
-        with:
-          distribution: goreleaser
-          version: v2.6.1
-          args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-          AUR_GITHUB_TOKEN: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+          PACKAGE_NAME: github.com/lets-cli/lets
+          GOLANG_CROSS_VERSION: v1.23
+        run: |
+          if [ ! -f ".release-env" ]; then
+            echo ".release-env is required for release";
+            exit 1;
+          fi
+
+          docker run \
+            --rm \
+            -e CGO_ENABLED=1 \
+            --env-file .release-env \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v `pwd`:/go/src/${PACKAGE_NAME}\
+            -v `pwd`/sysroot:/sysroot \
+            -w /go/src/${PACKAGE_NAME} \
+            ghcr.io/goreleaser/goreleaser-cross:${GOLANG_CROSS_VERSION} \
+            release --clean
